# chameleon

./: .env.example  .gitattributes-template  .gitignore  .mailmap  .mcp.json  .version-bump.json  ARCHITECTURE-v1.md  ARCHITECTURE-v2.md  ARCHITECTURE-v3-draft.md  ARCHITECTURE-v3.md  ARCHITECTURE-v4.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  INSTALL.md  LICENSE  README.md  RELEASE-NOTES.md  SECURITY.md  TESTING.md  VERIFICATION.md  gemini-extension.json  package.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
agents/: pattern-reviewer.md
docs/: README.md  architecture.md  chameleon-goal.md  effectiveness-study.md  gap-log.md  hot-path-budget.md  install.md  language-support-matrix.md  parity-progress.md  qa-team.md  test-audit-2026-05-12.md  verification-matrix.md  verification-runbook.md
hooks/: _resolve-python.sh  callout-detector  hooks.json  posttool-recorder  posttool-verify  preflight-and-advise  run-hook.cmd  session-start  stop-backstop
mcp/: package-lock.json  package.json  pyproject.toml
mcp/chameleon_mcp/: __init__.py  _constants.py  _excerpt_cache.py  _thresholds.py  autopass.py  blast_radius.py  calls_index.py  cochange.py  comprehension.py  constant_index.py  conventions.py  counterexamples.py  daemon.py  daemon_client.py  degraded_telemetry.py  dep_audit.py  dep_diff.py  duplication_review.py  enforcement.py  enforcement_calibration.py  exec_log.py  function_catalog.py  grounding.py  hook_helper.py  idiom_coverage.py  idiom_filter.py  index_db.py  intent_capture.py  judge.py  judge_async.py  kind_labels.py  lens_runner.py  lens_synthesis.py  lint_engine.py  locks.py  log_rotation.py  metrics.py  optouts.py  phantom_imports.py  plugin_paths.py  (+21 more)
mcp/chameleon_mcp/bootstrap/: __init__.py  canonical.py  canonical_scanner.py  clustering.py  comment_scan.py  discovery.py  import_graph.py  naming.py  orchestrator.py  tool_config.py  transaction.py  workspace.py
mcp/chameleon_mcp/drift/: __init__.py  observations.py  schema.py  sqlite_config.py
mcp/chameleon_mcp/extractors/: __init__.py  _base.py  python.py  registry.py  ruby.py  typescript.py
mcp/chameleon_mcp/packs/: __init__.py
mcp/chameleon_mcp/profile/: __init__.py  canonical_loader.py  config.py  loader.py  poisoning_scanner.py  schema.py  secret_scanner.py  summary.py  trust.py
mcp/chameleon_mcp/profile/migrations/: README.md
scripts/: bump-version.sh  chameleon-merge-driver.sh  check-no-personal-paths.sh  generate-typescript-checksums.sh  libcst_dump.py  make-readme-screenshot.py  prism_dump.rb  prune-plugin-cache.sh  qa-deploy.sh  qa-exec-wave.js  qa-fold-deepprobe.py  qa-fold-exec-wave.py  qa-matrix.py  qa-mcp-call.py  refresh_eval_fixtures.sh  ts_dump.mjs  verify-vendor-checksums.sh
tests/: _test_config.py  adversarial_profile_test.py  all_commands_acceptance_test.py  archetype_naming_test.py  bench_hot_path.py  bootstrap_mechanism_test.py  canonical_ref_test.py  canonical_v03_test.py  ci_windows_runtime.py  claude_code_acceptance_test.py  clustering_path_bucket_depth_test.py  clustering_shape_fuzzy_test.py  cold_start_init_test.py  comprehensive_test.py  config_loader_test.py  daemon_stress_test.py  (+112 more)
(+923 files in other folders)
