[project]
name = "chameleon-mcp"
version = "0.1.0"
description = "MCP server for chameleon. Auto-derives codebase conventions and serves archetype-keyed guidance via stdio JSON-RPC."
authors = [
    { name = "Cris Nahine", email = "crisjosephnahine@gmail.com" }
]
license = "MIT"
license-files = ["../LICENSE"]
readme = "../README.md"
requires-python = ">=3.11"

dependencies = [
    "mcp>=1.2.0",            # FastMCP framework
    "xxhash>=3.5.0",         # Non-crypto hash for sha_hint (drift.db, canonicals)
    "detect-secrets>=1.5.0", # Secret scanner for canonical excerpts
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[project.scripts]
chameleon-mcp = "chameleon_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chameleon_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
