[project]
name = "chameleon-mcp"
version = "1.9.4"
description = "MCP server for chameleon. Auto-derives codebase conventions and serves archetype-keyed guidance via stdio JSON-RPC."
authors = [
    { name = "Cris Nahine", email = "crisjosephnahine@gmail.com" }
]
license = "MIT"
readme = "../README.md"
requires-python = ">=3.11"

dependencies = [
    "mcp>=1.2.0",            # FastMCP framework
    "xxhash>=3.5.0",         # Non-crypto hash for sha_hint (drift.db, canonicals)
    "detect-secrets>=1.5.0", # Secret scanner for canonical excerpts
    "pyyaml>=6.0",           # tsconfig-adjacent + .eslintrc.yml + pnpm-workspace.yaml parsing
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[project.scripts]
chameleon-mcp = "chameleon_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chameleon_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    # Module-level imports are intentionally placed inside functions /
    # methods throughout chameleon_mcp/ to keep server startup fast (the
    # MCP cold-start budget is ~150ms; eagerly importing every tool's
    # dependencies blows that).
    "E402",
    # Long lines are mostly user-facing strings (error messages, idiom
    # markdown templates) where reflowing reduces readability.
    "E501",
]

[tool.ruff.lint.per-file-ignores]
# Test files can repeat themselves and import where they please.
# Path is relative to this pyproject.toml; the test suite lives one level
# above (`../tests/`) when running from `mcp/`.
"../tests/**" = ["B007"]
"tests/**" = ["B007"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
